--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ section{
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(../img/bg.png);
+    background: url(../img/bg.png) center center / cover no-repeat;
     background-size: cover;
     background-position: center;
     display: grid;
@@ -93,6 +93,8 @@ section{
 .hero-img img{
     width: 100%;
     height: auto;
+    margin: 0 auto;
+    text-align: center;
 }
 .hero-text h1{
     font-size: var(--big-font);
@@ -218,20 +220,17 @@ section{
         display: block;
     }
     .navlist{
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 100vh;
         padding: 100px 50px;
         top: 0;
-        right: 0;
-        bottom: 0;
-        left: 100%;
+        right: -100%;
         display: flex;
         flex-direction: column;
         background-color: rgba(0, 0, 0, 0.8); /* Fallback */
         backdrop-filter: blur(32px);
         transition: all .6s ease-in-out;
-        z-index: 1000;
     }
     .navlist a{
         display: block;
@@ -240,10 +239,7 @@ section{
         font-size: 1.7rem;
     }
     .navlist.open{
-        left: 0;
-    }
-    .right-content {
-        display: none; /* Esconde los elementos no necesarios en móviles */
+        right: 0;
     }
 }
 @media(max-width: 920px){
